--- a/index.html
+++ b/index.html
@@ -3,36 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Hi, this is my first web page!</h1>
+    <h1>Welcome to My Website!</h1>
 
+    <!-- Include a script to make a request to the Netlify function -->
     <script>
-        // Function to log the public IP address and send it to the server
-        async function logAndSendIpAddress() {
-            try {
-                const response = await fetch('https://api64.ipify.org?format=json');
-                const data = await response.json();
-
-                // Log the IP address
-                console.log('Public IP Address:', data.ip);
-
-                // Send the IP address to the server
-                await fetch('http://localhost:3000/myfirstwebsite', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ ip: data.ip }),
-                });
-            } catch (error) {
-                console.error('Error fetching or sending IP address:', error);
-            }
-        }
-
-        // Call the function to log and send the IP address
-        logAndSendIpAddress();
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('/.netlify/functions/logger-ip')
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Server Response:', data);
+                    // You can handle the server response as needed
+                })
+                .catch(error => console.error('Error:', error));
+        });
     </script>
 </body>
 </html>
