--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Fancy Website</title>
+    <title>My Colorful Website</title>
 
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
             margin: 0;
             padding: 0;
             display: flex;
@@ -21,14 +21,29 @@
             color: #333;
             text-align: center;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        pre {
+            font-size: 16px;
+            color: #333;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Fancy Website!</h1>
+    <pre>
+ █████╗ ██╗  ██╗███╗   ███╗███████╗██████╗ 
+██╔══██╗██║  ██║████╗ ████║██╔════╝██╔══██╗
+███████║███████║██╔████╔██║█████╗  ██║  ██║
+██╔══██║██╔══██║██║╚██╔╝██║██╔══╝  ██║  ██║
+██║  ██║██║  ██║██║ ╚═╝ ██║███████╗██████╔╝
+╚═╝  ╚═╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝╚═════╝ 
+    </pre>
+
+    <h1>Welcome to My Colorful Website!</h1>
 
     <!-- Include a script to make a request to the Netlify function -->
     <script>
