--- a/index.html
+++ b/index.html
@@ -3,47 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Colorful Website</title>
-
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ff9a9e, #fad0c4);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        pre {
-            font-size: 16px;
-            color: #333;
-            text-align: center;
-        }
-    </style>
+    <title>My Website</title>
 </head>
 <body>
-    <pre>
- █████╗ ██╗  ██╗███╗   ███╗███████╗██████╗ 
-██╔══██╗██║  ██║████╗ ████║██╔════╝██╔══██╗
-███████║███████║██╔████╔██║█████╗  ██║  ██║
-██╔══██║██╔══██║██║╚██╔╝██║██╔══╝  ██║  ██║
-██║  ██║██║  ██║██║ ╚═╝ ██║███████╗██████╔╝
-╚═╝  ╚═╝╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝╚═════╝ 
-    </pre>
-
-    <h1>Welcome to My Colorful Website!</h1>
+    <h1>Welcome to My Website!</h1>
 
     <!-- Include a script to make a request to the Netlify function -->
     <script>
